<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".registration_liscActivity">

    <include layout="@layout/layout_toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/h_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <!-- registration_lisc progress -->
        <ProgressBar
            android:id="@+id/registration_lisc_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/registration_lisc_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_registration_lisc_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeNote"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/firstName"
                        style="@style/editTextStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:hint="@string/prompt_firstname"
                        android:inputType="text" />


                    <EditText
                        android:id="@+id/lastName"
                        style="@style/editTextStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:hint="@string/prompt_lastname"
                        android:inputType="text" />
                </LinearLayout>

                <EditText
                    android:id="@+id/regemail"
                    style="@style/editTextStyle"
                    android:layout_margin="@dimen/padding_3dp"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/registration_lisc"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/liscenseNumber"
                    style="@style/editTextStyle"
                    android:layout_margin="@dimen/padding_3dp"
                    android:hint="@string/prompt_license_number"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/license_type_spinner"
                        style="@style/mySpinnerItemStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:entries="@array/lisc_type_values" />

                    <Spinner
                        android:id="@+id/license_class_spinner"
                        style="@style/mySpinnerItemStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:entries="@array/lisc_class_values" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/expiry_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/selected_date"
                        style="@style/editTextStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:editable="false"
                        android:hint="Expiry Date"
                        android:inputType="text"
                        android:onClick="showDatePickerDialog" />


                    <!--   <Button
                           android:id="@+id/expiry_date"
                           android:layout_width="fill_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/expiry_date"
                           android:onClick="showDatePickerDialog" android:layout_weight="1"/>-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/agency"
                        style="@style/editTextStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:hint="@string/prompt_agency"
                        android:inputType="text" />


                    <EditText
                        android:id="@+id/branch"
                        style="@style/editTextStyle"
                        android:layout_margin="@dimen/padding_3dp"
                        android:layout_weight="0.5"
                        android:hint="@string/prompt_branch"
                        android:inputType="text" />

                </LinearLayout>

                <EditText
                    android:id="@+id/username"
                    style="@style/editTextStyle"
                    android:layout_margin="@dimen/padding_3dp"
                    android:hint="@string/prompt_username"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/password"
                    style="@style/editTextStyle"
                    android:layout_margin="@dimen/padding_3dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/registration_lisc"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/confirmPassword"
                    style="@style/editTextStyle"
                    android:layout_margin="@dimen/padding_3dp"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/registration_lisc_register_button"
                    style="@style/buttonStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
