<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_5dp">

    <TextView
        android:id="@+id/ohScanner_Menu"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/edit_text_bg"
        android:clickable="true"
        android:drawableLeft="@drawable/icon_scanner"
        android:drawablePadding="@dimen/margin_10dp"
        android:gravity="left|center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/margin_10dp"
        android:singleLine="true"
        android:tag="scan"
        android:text="@string/oh_scanner_menu"
        android:textColor="@color/buttonBackgroundDark" />

    <TextView
        android:id="@+id/ohCurrentListings_Menu"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/edit_text_bg"
        android:clickable="true"
        android:drawableLeft="@drawable/icon_current_listing"
        android:drawablePadding="@dimen/margin_10dp"
        android:gravity="left|center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/margin_10dp"
        android:singleLine="true"
        android:tag="current"
        android:text="@string/oh_current_listings_menu"
        android:textColor="@color/buttonBackgroundDark" />

    <TextView
        android:id="@+id/ohArchivedListings_Menu"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/edit_text_bg"
        android:clickable="true"
        android:drawableLeft="@drawable/icon_archived_listing"
        android:drawablePadding="@dimen/margin_10dp"
        android:gravity="left|center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/margin_10dp"
        android:singleLine="true"
        android:tag="archived"
        android:text="@string/oh_archived_listings_menu"
        android:textColor="@color/buttonBackgroundDark" />


</LinearLayout>
